--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
 Django==5.0.14
 requests==2.31.0
 python-dotenv==1.0.1
+langgraph==0.2.49
+langchain==0.3.8
+langchain-core==0.3.25
+langchain-openai==0.2.12
+redis==5.1.1
+django-redis==5.4.0
+celery==5.4.0
+pydantic==2.10.2
+typing-extensions==4.12.2
+httpx==0.28.1
+aiohttp==3.11.8
+asyncio==3.4.3
